New Image --amend

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae nihil accusantium ipsam qui? Aspernatur, reiciendis? Laborum fugiat reiciendis, modi dolore, eveniet ipsam quae quaerat ut molestias, dicta magni doloremque rerum.</p>
     
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit commodi deleniti officia fuga tenetur dolore molestiae omnis, corrupti odio amet voluptatum. Debitis dicta minima ut eos quia qui nisi omnis! Accusantium magnam eius, mollitia voluptates odit totam impedit! Accusantium illo atque sunt consequuntur numquam, ea a ad nam aliquam? Accusamus sequi id quo. Temporibus quia cum similique voluptate cupiditate commodi ab ea quae molestiae odit iure esse earum praesentium magni mollitia accusantium, nesciunt tempore impedit veniam aspernatur. Totam, soluta repellendus.</p>
-    
+
+    <img src="https:/via.placeholder.com/200" alt="#">
+
 </body>
 </html>
