--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
 
     <img src="https:/via.placeholder.com/200" alt="#">
 
+    <ul>
+        <li>Lorem, ipsum.</li>
+        <li>Repellendus, illo.</li>
+        <li>Similique, odit.</li>
+        <li>Eum, quas?</li>
+        <li>Iure, labore!</li>
+    </ul>
+
 </body>
 </html>
