--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     
-    <h1>Lorem ipsum dolor sit amet consectetur.</h1>
+    <h1>this is from f1 branch</h1>
 
     <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Beatae nihil accusantium ipsam qui? Aspernatur, reiciendis? Laborum fugiat reiciendis, modi dolore, eveniet ipsam quae quaerat ut molestias, dicta magni doloremque rerum.</p>
     
@@ -23,6 +23,10 @@
         <li>Eum, quas?</li>
         <li>Iure, labore!</li>
     </ul>
+
+    <div class="f2__new">
+        test
+    </div>
 
 </body>
 </html>
